[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addClickAddAmtNode.gd" type="Script" id=2]
[ext_resource path="res://autoClicker1Node.gd" type="Script" id=3]
[ext_resource path="res://mainClickerNode.gd" type="Script" id=4]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="totalDisplayLabel" type="Label" parent="."]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 16.0
text = "0"
align = 2

[node name="addClickAddAmtNode" type="Node" parent="."]
script = ExtResource( 2 )

[node name="addClickAddAmtBtn" type="Button" parent="addClickAddAmtNode"]
margin_left = 128.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 128.0

[node name="addClickAddAmtLabel" type="Label" parent="addClickAddAmtNode"]
margin_left = 160.0
margin_top = 104.0
margin_right = 280.0
margin_bottom = 136.0
text = "Increse Clicks by 1
Cost: 5"

[node name="addClickAddAmtCntLabel" type="Label" parent="addClickAddAmtNode"]
margin_top = 104.0
margin_right = 90.0
margin_bottom = 135.0
text = "Amt Per Click:
1"

[node name="mainClickerNode" type="Node" parent="."]
script = ExtResource( 4 )

[node name="mainClickerBtn" type="Button" parent="mainClickerNode"]
margin_right = 64.0
margin_bottom = 64.0

[node name="autoClicker1Node" type="Node" parent="."]
script = ExtResource( 3 )

[node name="autoClicker1Label" type="Label" parent="autoClicker1Node"]
margin_left = 160.0
margin_top = 176.0
margin_right = 274.0
margin_bottom = 190.0
text = "1 coin per second"

[node name="autoClicker1Timer" type="Timer" parent="autoClicker1Node"]
autostart = true

[node name="autoClicker1HSlider" type="HSlider" parent="autoClicker1Node"]
margin_left = 128.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 208.0

[node name="autoClicker1Button" type="Button" parent="autoClicker1Node"]
margin_left = 128.0
margin_top = 168.0
margin_right = 152.0
margin_bottom = 192.0

[node name="amtLabel" type="Label" parent="autoClicker1Node"]
margin_top = 168.0
margin_right = 40.0
margin_bottom = 182.0
text = "Amt of autoclickers:
"

[connection signal="pressed" from="addClickAddAmtNode/addClickAddAmtBtn" to="addClickAddAmtNode" method="_on_addClickAddAmtBtn_pressed"]
[connection signal="pressed" from="mainClickerNode/mainClickerBtn" to="mainClickerNode" method="_on_mainClickerBtn_pressed"]
[connection signal="timeout" from="autoClicker1Node/autoClicker1Timer" to="autoClicker1Node" method="_on_autoClicker1Timer_timeout"]
[connection signal="pressed" from="autoClicker1Node/autoClicker1Button" to="autoClicker1Node" method="_on_autoClicker1Button_pressed"]
